--- a/src/style.css
+++ b/src/style.css
@@ -1,105 +1,87 @@
-.pageBackground {
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap');
+
+
+body, html, main, table {
+  margin: 0;
+  font-family: Poppins, Arial, Helvetica, sans-serif;
+  font-weight: bold;
+}
+
+body {
+  padding: 20px;
   background-color: #f6f6f6;
 }
-.main {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  justify-self: center;
-}
+
 table {
-  align-self: center;
-  font-family: Arial, Helvetica, sans-serif;
+  width: 100%;
   border-collapse: collapse;
 }
-.mainHeader {
-  font-size: 3em;
-  text-align: center;
-  color: #2b2d42;
-}
-.roomHeader {
-  font-size: 0.9em;
-  text-align: center;
+
+table a {
   text-decoration: none;
-  color: inherit;
-  color: #2b2d42;
 }
+
+tr {
+  border-top: 1px solid #f6f6f6;
+  border-bottom: 1px solid #f6f6f6;
+}
+
+tr:hover td {
+  border-top: 4px solid #f6f6f6;
+  border-bottom: 4px solid #f6f6f6;
+}
+
 td,
 th {
-  border: 1px solid #ddd;
+  border: 1px solid #f6f6f6;
+  width: 40px;
+  text-align: center;
+  background: lightgreen;
+  padding: 5px 0;
+}
+
+td.row-number {
+  width: 100px;
+  background: lightblue;
+  color: black;
+}
+
+td.row-number a {
+  color: black;
 }
 
 td.fail {
-  background: rgb(247, 177, 170);
-}
-
-td,
-th {
-  margin-left: 30%;
-  padding: 20px 100px;
-  text-align: center;
-}
-
-td.good {
-  background: rgb(184, 245, 184);
-  text-align: center;
-}
-
-tr:nth-child(even) td.fail {
-  background: rgb(247, 177, 170);
-}
-
-tr:hover,
-.tor {
-  color: white;
-}
-
-tr:hover td.good,
-.tor {
-  background: #27ccab;
-}
-
-tr:hover td.fail {
-  background: rgb(245, 84, 84);
-}
-
-tr.fail:hover,
-.tor.fail {
-  background: rgb(245, 84, 84);
+  background: lightcoral;
 }
 
 .tor {
-  width: 800px;
-  height: 300px;
   padding: 1px 20px;
   border-radius: 5px;
   margin-bottom: 20px;
+  padding-bottom: 20px;
+  background: lightgreen;
 }
 
-.tor table {
-  margin-bottom: 14px;
+.tor.fail, .tor.fail td, .tor.fail th {
+  background: lightcoral;
 }
-.rackHeader {
+
+h1 {
   text-transform: uppercase;
-  text-decoration: none;
-  color: inherit;
-  color: black;
 }
+
 .rowView {
   text-decoration: none;
   color: inherit;
   color: black;
   text-align: center;
 }
+
 .backBtn {
   width: 200px;
   height: 60px;
   border: none;
-  color: #ddd;
-  background-color: rgb(255, 0, 65);
+  background-color: lightblue;
   border-radius: 4px;
   font-size: 1.4em;
-}
-.rowTable {
-  align-self: center;
 }
