--- a/src/style.css
+++ b/src/style.css
@@ -5,6 +5,7 @@ html,
 main,
 table {
   margin: 0;
+  text-decoration: none;
   font-family: Poppins, Arial, Helvetica, sans-serif;
   font-weight: bold;
 }
@@ -24,6 +25,7 @@ table a {
 }
 
 tr {
+  text-decoration: none;
   border-top: 1px solid #f6f6f6;
   border-bottom: 1px solid #f6f6f6;
 }
@@ -38,7 +40,7 @@ th {
   border: 1px solid #f6f6f6;
   width: 30px;
   color: black;
-
+  text-decoration: none;
   text-align: center;
   background: lightgreen;
   padding: 5px 0;
